FIX: mini phones logo too big in footer tldp

--- a/TldpFooter/Footer.scss
+++ b/TldpFooter/Footer.scss
@@ -100,8 +100,10 @@
       @include threeBlocksMiddleCentered();
       align-self: center;
 
-      .tldpLogo {
-
+      .tldpFooterLogo {
+        @include breakpoint(small) {
+          margin: 0.1rem;
+        }
         //width: 16em;
     }
     }
